--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <h1>Effective Solutions for Your Business</h1>
-      <button type="">Order Service</button>
+      <button type="button">Order Service</button>
       <section>
         <h3>Strategy</h3>
         <p>
@@ -50,22 +50,13 @@
         <ul>
           <li>
             <a href=""></a
-            ><img
-              src="images/img (1).jpg"
-              alt="photo"
-              width="264"
-              height="260"
-            />
+            ><img src="images/img1.jpg" alt="photo" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="images/img (2).jpg"
-                alt="photo"
-                width="264"
-                height="260"
+              <img src="images/img2.jpg" alt="photo" width="264" height="260"
             /></a>
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -73,22 +64,14 @@
 
           <li>
             <a href=""
-              ><img
-                src="images/img (3).jpg"
-                alt="photo"
-                width="264"
-                height="260"
+              ><img src="images/img3.jpg" alt="photo" width="264" height="260"
             /></a>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <a href=""
-              ><img
-                src="images/img (4).jpg"
-                alt="photo"
-                width="264"
-                height="260"
+              ><img src="images/img4.jpg" alt="photo" width="264" height="260"
             /></a>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
