--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <header>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -15,13 +16,17 @@
         </ul>
       </nav>
       <address>
-        <a href="">info@devstudio.com</a>
-        <a href="">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <h3>Strategy</h3>
         <p>
@@ -48,7 +53,7 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <a href=""></a
+            <a></a
             ><img src="images/img1.jpg" alt="photo" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -79,7 +84,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="/index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
