--- a/index.html
+++ b/index.html
@@ -53,30 +53,23 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <a></a
-            ><img src="images/img1.jpg" alt="photo" width="264" height="260" />
+            <img src="./images/img1.jpg" alt="photo" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <a href="">
-              <img src="images/img2.jpg" alt="photo" width="264" height="260"
-            /></a>
+            <img src="./images/img2.jpg" alt="photo" width="264" height="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <a href=""
-              ><img src="images/img3.jpg" alt="photo" width="264" height="260"
-            /></a>
+            <img src="./images/img3.jpg" alt="photo" width="264" height="260" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <a href=""
-              ><img src="images/img4.jpg" alt="photo" width="264" height="260"
-            /></a>
+            <img src="./images/img4.jpg" alt="photo" width="264" height="260" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -84,7 +77,7 @@
       </section>
     </main>
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
